--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<Employee>
 @{
     ViewData["Title"] = "Home Page";
+    Layout = ViewBag.Layout;
 }
 
 <div class="text-center">
