--- a/Views/Employee/Create.cshtml
+++ b/Views/Employee/Create.cshtml
@@ -3,11 +3,9 @@
     Layout = ViewBag.Layout;
 }
 
-<h2>Edit Employee</h2>
+<h2>Create Employee</h2>
 
-<form asp-action="Update" method="post">
-    <input type="hidden" asp-for="Id" />
-
+<form asp-action="Create" method="post">
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
@@ -38,5 +36,5 @@
         <span asp-validation-for="Image" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary">Create</button>
 </form>
