--- a/Views/Employee/Details.cshtml
+++ b/Views/Employee/Details.cshtml
@@ -28,8 +28,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <img src="@Url.Content(Model.Image)" class="img-fluid" style="max-width: 150px;"
-                        alt="Employee Image">
+                    <img src="@Model.Image" class="img-fluid" style="max-width: 150px;" alt="Employee Image">
                 </div>
             </div>
         </div>
