Laboratory Work 6 Complete

--- a/Views/Shared/_Lab2Layout.cshtml
+++ b/Views/Shared/_Lab2Layout.cshtml
@@ -28,6 +28,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee"
                                 asp-action="Index">Employees</a>
                         </li>
+                        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Company"
+                                asp-action="Index">Company
+                                Index</a></li>
+                        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Employee"
+                                asp-action="SalaryDetails">Employee Salary
+                                Details</a></li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home"
                                 asp-action="Privacy">Privacy</a>
